--- a/css/style.css
+++ b/css/style.css
@@ -1359,3 +1359,19 @@ color: black;
     -webkit-transform: scale(1.05);
     transform: scale(1.05);
 }
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+    border-radius: 5px;
+    color: black;
+    background-color: white;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card img {
+    border-radius: 5px 5px 0 0;
+}
