--- a/css/style.css
+++ b/css/style.css
@@ -1619,3 +1619,9 @@ h6 {
         top: 0;
     }
 }
+
+@media screen and (max-width: 768px){
+    .gallery img{
+        padding-bottom: 15px;
+    }
+}
