--- a/letshack/assets/css/update.css
+++ b/letshack/assets/css/update.css
@@ -239,3 +239,10 @@ html,body{
 #logo-img {
   width: 2em;
 }
+#footer-contact > ul {
+  margin: 0 !important;
+  padding: 0;
+}
+#footer-contact > ul > li {
+  padding: 1em;
+}
